fixed home/recommended page for desktop so no information gets cut off

--- a/front-end/src/pages/Concert.css
+++ b/front-end/src/pages/Concert.css
@@ -34,12 +34,16 @@
   margin: 15px;
 }
 
-img {
-}
+
 @media screen and (min-width: 600px) {
   .Concert {
     width: 25%;
     margin: auto;
+  }
+  .Concert-header{
+    width: 50%;
+    margin: auto;
+    position: relative;
   }
 }
 
